--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <div id='block-main'>
     <div class='wrapper'>
     <header id='header'>
-        <div id='headerbar' class='grid-block'> <a id='logo' href='#'><img src='images/logo.png' alt='logo' height='70' width='260'></a> </div>
+        <div id='headerbar' class='grid-block'> <a id='logo' href='#'><img src='images/logo.png' alt='logo' height='120' width='300'></a> </div>
         <div id='menubar' class='grid-block'>
         <nav id='menu'>
             <ul class='menu menu-dropdown'>
@@ -512,44 +512,59 @@
             <h3 class="module-title">Random Projects</h3>
             <ul class="list-blank" id="vertical-ticker">
                 <li> 
-                    <img alt="Restaurant" src="images/home_restaurant01.jpg" height="45" width="60">
-                    <h3>Pizzeria Napoli</h3>
-                    italian food 
+                    <img alt="Onixus" src="images/HTML/1.png">
+                    <h3>Onixus</h3>
+                    HTML-SinglePage 
                 </li>
                 <li> 
-                    <img alt="Restaurant" src="images/home_restaurant02.jpg" height="45" width="60">
-                    <h3>New Saigon</h3>
-                    asian food 
+                    <img alt="Collectionate" src="images/HTML/3-1.png">
+                    <h3>Collectionate</h3>
+                    HTML-MultiPage 
                 </li>
                 <li> 
-                    <img alt="Restaurant" src="images/home_restaurant03.jpg" height="45" width="60">
-                    <h3>Grand Elysee</h3>
-                    french food 
+                    <img alt="Order Food Online" src="images/IOS/1-1.png">
+                    <h3>Order Food Online</h3>
+                    IOS 
                 </li>
                 <li> 
-                    <img alt="Restaurant" src="images/home_restaurant04.jpg" height="45" width="60">
-                    <h3>Bella Italia</h3>
-                    italian food 
+                    <img alt="Jitt Kids" src="images/HTML/7.png">
+                    <h3>Jitt Kids</h3>
+                     HTML-SinglePage
                 </li>
-                <li style="margin-bottom: 0;">
-                    <img alt="Restaurant" src="images/home_restaurant05.jpg" height="45" width="60">
-                    <h3>Veggie Garden</h3>
-                    vegetarian food 
+                <li>
+                    <img alt="Home Builder" src="images/HTML/12-1.png">
+                    <h3>Home Builder</h3>
+                    HTML-MultiPage
                 </li>
-                <li style="margin-bottom: 0;">
-                    <img alt="Restaurant" src="images/home_restaurant05.jpg" height="45" width="60">
-                    <h3>Veggie Garden</h3>
-                    vegetarian food 
+                <li>
+                    <img alt="Buy Online" src="images/PHP/1-1.png">
+                    <h3>Buy Online</h3>
+                    PHP 
                 </li>
-                <li style="margin-bottom: 0;">
-                    <img alt="Restaurant" src="images/home_restaurant05.jpg" height="45" width="60">
-                    <h3>Veggie Garden</h3>
-                    vegetarian food 
+                <li>
+                    <img alt="Special Offer" src="images/HTML/9.png">
+                    <h3>Special Offer</h3>
+                    HTML-SinglePage 
                 </li>
-                <li style="margin-bottom: 0;">
-                    <img alt="Restaurant" src="images/home_restaurant05.jpg" height="45" width="60">
-                    <h3>Veggie Garden</h3>
-                    vegetarian food 
+                <li>
+                    <img alt="Folder" src="images/HTML/14-1.png">
+                    <h3>Folder</h3>
+                    HTML-MultiPage 
+                </li>
+                <li>
+                    <img alt="Facebook Supply" src="images/HTML/24.png">
+                    <h3>Facebook Supply</h3>
+                    HTML-SinglePage 
+                </li>
+                <li>
+                    <img alt="Pridinis" src="images/HTML/27.png">
+                    <h3>Pridinis</h3>
+                    HTML-SinglePage 
+                </li>
+                <li>
+                    <img alt="SmartPhone Unlockers" src="images/HTML/29-1.png">
+                    <h3>SmartPhone Unlockers</h3>
+                    HTML-MultiPage 
                 </li>
               </ul>
           </div>
