--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   .element_project
   {
     display: inline-block;
-    margin: 20px 15px;        
+    margin: 40px 15px;        
     position:relative;
     opacity:0.7;
   }
@@ -132,7 +132,7 @@
     {
         display: block;
         float: left;
-        height: 270px;
+        height: 320px;
         width: 193px;
     }
     a.hidden
@@ -165,9 +165,9 @@
 }
 .element_project a img {
 	width:193px;
-	height:270px;
+	height:320px;
 }
-.box-ios-1 a img, .box-ios-2 a img {
+.box-ios-1 a, .box-ios-2 a {
 	width: 193px;
 	height:320px;
 }
