--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link rel='stylesheet' href='css/mainstyle.css' />
   <link rel='stylesheet' href='css/support.css' />
   <link rel='stylesheet' href='css/colorbox.css' />
-  <link rel="stylesheet" media="only screen and (-webkit-min-device-pixel-ratio: 2)" type="text/css" href="iphone4.css" />
   
   <script type='text/javascript' src='js/jquery.js'></script>
   <script src='http://code.jquery.com/jquery-1.9.1.min.js'></script>
@@ -176,6 +175,7 @@
   </head>
 
   <body id='page' class='page sidebar-a-right sidebar-b-right isblog wp-home wp-front_page' data-config='{'twitter':0,'plusone':0}'>
+  <div>confirm la da oki</div>
 <div id='block-toolbar'>
     <div class='wrapper'>
     <div id='toolbar' class='grid-block'>
