--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
   </head>
 
   <body id='page' class='page sidebar-a-right sidebar-b-right isblog wp-home wp-front_page' data-config='{'twitter':0,'plusone':0}'>
-  <div>confirm la da oki</div>
+ <script>
+ 	alert('x');
+ </script>
 <div id='block-toolbar'>
     <div class='wrapper'>
     <div id='toolbar' class='grid-block'>
