--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
   </head>
 
   <body id='page' class='page sidebar-a-right sidebar-b-right isblog wp-home wp-front_page' data-config='{'twitter':0,'plusone':0}'>
+  <div style="color:red">Confirm olala</div>
  <script>
  	alert('x');
  </script>
