--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel='stylesheet' href='css/mainstyle.css' />
   <link rel='stylesheet' href='css/support.css' />
   <link rel='stylesheet' href='css/colorbox.css' />
+  <link rel='stylesheet' href='css/smartphone.css' />
   
   <script type='text/javascript' src='js/jquery.js'></script>
   <script src='http://code.jquery.com/jquery-1.9.1.min.js'></script>
